[project]
name = "aoj-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Cat Mask",email = "aiysosis@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "aoj", from = "src"}]

[tool.poetry.scripts]
test = "aoj:runTest"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
