[project]
name = "aoj-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Cat Mask",email = "aiysosis@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "aoj", from = "src"}]

[tool.poetry.scripts]
test = "tests:run_tests"
create = "aoj:new_algorithm"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
